--- a/server/UI/admins/all-orders.html
+++ b/server/UI/admins/all-orders.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fast-Food-Fast | Profile</title>
+    <title>Fast-Food-Fast | Orders</title>
     <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css" />
     <link rel="stylesheet" type="text/css" href="../assets/vendor/font-awesome/css/font-awesome.min.css" />
@@ -58,7 +58,7 @@
                                 <!-- <th>Quantity</th> -->
                                 <th>Date Ordered</th>
                                 <th>Order Status</th>
-                                <th>Delivery Status</th>
+                                <th class="hide">Delivery Status</th>
                                 <th>Manage Order</th>
                             </thead>
                             <tbody>
@@ -124,7 +124,7 @@
                                                             <h2>Rejecting this order cancels all items within this
                                                                 order. Are you sure
                                                                 you want to reject this users order?</h2>
-                                                            <button class="btn btn-red btn-rounded btn-bg">Reject</button>
+                                                            <button class="btn btn-red btn-rounded btn-bg rejectBtn">Reject</button>
                                                             <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
                                                         </div>
                                                     </form>
@@ -147,65 +147,13 @@
                                                             <h2>Marking this order as complete accepts all the
                                                                 items in the order and updates its delivery status to
                                                                 completed, Are you sure you want to proceed?</h2>
-                                                            <button class="btn btn-green btn-rounded btn-bg">Proceed</button>
+                                                            <button class="btn btn-green btn-rounded btn-bg completeBtn">Proceed</button>
                                                             <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
                                                         </div>
                                                     </form>
                                                 </div>
                                             </div>
                                         </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a class="link" href="ordered-items.html">#55678</a>
-                                    </td>
-                                    <td>Mr. Fred User</td>
-                                    <td>3 Item(s)
-                                        <a href="ordered-items.html">
-                                            <Button class="btn btn-sm btn-blue">View items</Button>
-                                        </a>
-                                    </td>
-                                    <td>&#8358; 3,500</td>
-                                    <!-- <td>2</td> -->
-                                    <td>11/09/2018 08:55pm</td>
-                                    <td class="text-rejected">Rejected</td>
-                                    <td class="text-rejected">Canceled</td>
-                                    <td class="">
-                                        <button class="triggerModal btn btn-blue btn-sm" data-target="acceptModal"
-                                            disabled>Accept</button>
-                                        <button class="triggerModal btn btn-red btn-sm" data-target="rejectModal"
-                                            disabled>Rejected</button>
-                                        <button class="triggerModal btn btn-green btn-sm" data-target="completeModal"
-                                            disabled>Mark
-                                            As Complete
-                                        </button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a class="link" href="ordered-items.html">#55678</a>
-                                    </td>
-                                    <td>Mr. Jerry User</td>
-                                    <td>1 Item(s)
-                                        <a href="ordered-items.html">
-                                            <Button class="btn btn-sm btn-blue">View items</Button>
-                                        </a>
-                                    </td>
-                                    <td>&#8358; 3,500</td>
-                                    <!-- <td>2</td> -->
-                                    <td>11/09/2018 08:55pm</td>
-                                    <td class="text-success">Completed</td>
-                                    <td class="text-success">Delivered</td>
-                                    <td class="">
-                                        <button class="triggerModal btn btn-green btn-sm" data-target="acceptModal"
-                                            disabled>Accepted</button>
-                                        <button class="triggerModal btn btn-red btn-sm" data-target="rejectModal"
-                                            disabled>Reject</button>
-                                        <button class="triggerModal btn btn-green btn-sm" data-target="completeModal"
-                                            disabled>Mark
-                                            As Completed
-                                        </button>
                                     </td>
                                 </tr>
                             </tbody>
@@ -226,7 +174,9 @@
     </footer>
 
     <script src="../assets/js/main.js"></script>
-    <script src="../src/adminRedirectCtrl.js"></script>
+    <script src="./src/index.js"></script>
+    <script src="./src/getUserOrdersCtrl.js"></script>
+    <script src="./src/adminActions.js"></script>
 </body>
 
 </html>
