--- a/server/UI/admins/completed-orders.html
+++ b/server/UI/admins/completed-orders.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Fast-Food-Fast | Profile</title>
+    <title>Fast-Food-Fast | Completed Orders</title>
     <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css" />
     <link rel="stylesheet" type="text/css" href="../assets/vendor/font-awesome/css/font-awesome.min.css" />
@@ -38,7 +38,10 @@
         </nav>
     </header>
 
-    <main class="main-content">          <section class="m-t-40 text-center">             <h2 class="setup-page hide t-40">Loading...                 <i class="fa fa-spin fa-spinner"></i>             </h2>         </section>
+    <main class="main-content">
+        <section class="m-t-40 text-center">
+            <h2 class="setup-page hide t-40">Loading... <i class="fa fa-spin fa-spinner"></i> </h2>
+        </section>
 
         <div class="container hide">
 
@@ -100,7 +103,6 @@
     </footer>
 
     <script src="../assets/js/main.js"></script>
-    <script src="../src/adminRedirectCtrl.js"></script>
 </body>
 
 </html>
